2002-03-09  Peter Wood <peter.wood@worldonline.dk>
	    Sam Steingold  <sds@gnu.org>

	added signal handling
	* linux.lisp: interface to <bits/sigset.h>, <bits/sigaction.h>
	and <signal.h>
	* wrap.lisp: many wrappers and examples

2002-03-08  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/wrap.lisp (real-path): linux:realpath does
	not return an integer flag
	(vec2string): use :END arg to CONVERT-STRING-FROM-BYTES instead
	of SUBSEQ
	* bindings/linuxlibc6/linux.lisp (realpath): return a pointer to
	C-ARRAY-MAX, not C-ARRAY
	(errno): a simple DEF-C-VAR, not a SYMBOL-MACRO
	Suggested by Joerg Hoehle

2002-03-08  Sam Steingold  <sds@gnu.org>

	renamed dirkey.lisp to dirkey1.lisp (like foreign1.lisp/foreign.d)
	since (compile-file "foo") clobbers foo.c (because of FFI)
	* init.lisp: "dirkey1", not "dirkey"
	* makemake.in (LPARTS): ditto
	* dirkey1.lisp: renamed from dirkey.lisp
	do the actual coding in package SYSTEM

2002-03-08  Sam Steingold  <sds@gnu.org>

	* genclisph.d (nonreturning_function, SLONGLONG, ULONGLONG):
	fixed for MICROSOFT
	* makemake.in: create modules-related rules on non-UNIX systems
	($with_export_syscalls): do not add -lm to LIBS on win32
	Reported by <Joerg-Cyril.Hoehle@t-systems.com>

2002-03-06  Sam Steingold  <sds@gnu.org>

	POSIX:STREAM-LOCK - file stream locking interface based on flock(2)
	* stream.d (STREAM-LOCK): implemented
	* subr.d, subrkw.d (stream_lock): declared
	* constsym.d (stream_lock, Kshared): added
	* configure.in (HAVE_FLOCK): check for flock(2)
	(HAVE_SYS_WAIT_H): check for <sys/file.h> (flock(2) is declared there)
	* unixconf.h.in (HAVE_FLOCK, HAVE_SYS_WAIT_H): added the #undef's
	* posix.lisp (STREAM-LOCK) [:unix]: export

2002-03-06  Sam Steingold  <sds@gnu.org>

	infrastructure tweaks
	* makemake.in (XCFLAGS): handle --with-threads=FLAVOR by
	adding "-DMULTITHREAD -Dflavor"
	* configure (info_help): documented all options
	* Makefile.devel (upload): new target